--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="lg:mx-44 lg:mt-8 mt-16 mb-8">
       <hr>
     </div>
-    <div class="lg:mx-44 flex gap-4 mb-10 flex-col lg:flex-row lg:gap-48 items-center lg:items-start">
+    <div class="lg:mx-44 flex gap-4 flex-col lg:flex-row lg:gap-48 items-center lg:items-start">
       <div class="font-bold text-heading font-karla uppercase text-sm z-40 text-center lg:text-left">
         <h3 class="pb-7">Our company</h3>
 
